--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ p {
     padding: 6px 12px;
     /* border: 1px solid #ccc; */
     border-top: none;
+    background-color: #1A1A1A;
 }
 
 .btn-color {
@@ -131,7 +132,7 @@ p {
       .tab {
         overflow-x: auto;
         width: 100%;
-        padding-left: 50px ;
+        padding-left: 60px ;
       }
 
 }
