--- a/style.css
+++ b/style.css
@@ -204,18 +204,18 @@ body {
 
 
 @media only screen and (max-width: 562px) {
-    
-    .sidebar {
-        height: 100vh
-    }
 
     .sidebar-content {
         display: inline;
 
     }
 
+    .sidebar{
+        height: 100vh;
+    }
+
     .content {
-        padding: 50px;
+        padding: 20px;
         /* overflow-y: scroll; height:100vh; */
         /* overflow: hidden;  */
 
